Fix the mobile image of career and bug in certificates filtering n handling layout shift by permanant scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+html {
+  overflow-y: scroll;
+}
+
 body {
   --bg-light-color: white;
   --text-light-color: black;
